--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 #header {
-  font-family: arial;
+  font-family: sans-serif;
   font-size: 30px;
   text-align: center;
 }
@@ -24,7 +24,7 @@ body {
 #footer {
   font-family: arial;
   font-style: italic;
-  font-size:0.5em;
+  font-size: 1em;
   text-align: center;
 }
 
@@ -65,6 +65,7 @@ body {
 
 .button-container {
   display: flex;
+
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
@@ -74,8 +75,9 @@ body {
   color: white;
   border-radius: 4px;
   background-color: green;
-  font-size: 14px;
-  padding: 5px;
+  font-size: 20px;
+  padding: 8px;
+  text-decoration: none;
 }
 
 #left-button {
